Temporary Fix to make white font visible
Temporary fix done to make font visible clearly in front of background image.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,9 @@
-
-
 body {
     font-family: 'Anaheim', sans-serif;
     font-size: 16px;
     background-color: black;
+    color: white;
+    font-weight: 200;
 }
 
 .column-nopadding {
@@ -11,13 +11,16 @@ body {
 }
 
 .bgimage1 {
-    background-image: url('../images/photo1.jpg');
+    background: linear-gradient(
+                rgba(0, 0, 0, 0.5),
+                rgba(0, 0, 0, 0.5)),
+                url('../images/photo1.jpg');
     background-size: 100% 100%;
+    position: relative;
     height: 50vh;
-    opacity: 0.5;
     transition: opacity .30s ease-in-out;
-   -moz-transition: opacity .30s ease-in-out;
-   -webkit-transition: opacity .30s ease-in-out;
+    -moz-transition: opacity .30s ease-in-out;
+    -webkit-transition: opacity .30s ease-in-out;
 }
 
 .bgimage2 {
@@ -93,12 +96,13 @@ body {
 .bgimage3:hover, .bgimage4:hover,
 .bgimage5:hover, .bgimage6:hover,
 .bgimage7:hover, .bgimage8:hover {
-    opacity: 0.7;
+
 }
 
 .content {
     position: absolute;
     bottom: 0%;
+    z-index: 1;
 }
 
 .content-wraper {
